# wxcpptest

LoginServer/: CMakeLists.txt  main.cpp  server.cpp  server.h
LoginServer/conf/: config.ini
